[COM_MEMBERS] Prevent image in browse list from being squeezed too small

--- a/components/com_members/assets/css/members.css
+++ b/components/com_members/assets/css/members.css
@@ -572,6 +572,9 @@
 		font-size: 1em;
 		color: #666;
 	}
+	.com_members .entries tbody th {
+		width: 50px;
+	}
 
 /* Members Edit CSS */
 	#member-picture {
